--- a/index.html
+++ b/index.html
@@ -46,7 +46,16 @@
             </div>
 
         </div>
+        
+        <div class="actor-cards-conteiner">
+            <div class="cards-content">
+                <div class="cards banner-1">Robert Pattison - Batman</div>
+                <div class="cards banner-2">Zoe Kravitz - Mulher gato</div>
+                <div class="cards banner-3">Jeffrey Wright - Gordon</div>
+            </div>
 
+        </div>
+        
     </div>
 </body>
 </html>
