--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         
         <div class="actor-cards-conteiner">
             <div class="cards-content">
-                <div class="cards banner-1">Robert Pattison - Batman</div>
-                <div class="cards banner-2">Zoe Kravitz - Mulher gato</div>
-                <div class="cards banner-3">Jeffrey Wright - Gordon</div>
+                <div class="card banner-1">Robert Pattison - Batman</div>
+                <div class="card banner-2">Zoe Kravitz - Mulher gato</div>
+                <div class="card banner-3">Jeffrey Wright - Gordon</div>
             </div>
 
         </div>
