--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
             <div class="card banner-3">Jeffrey Wright - Gordon</div>
         </div>
     </div>
-        
+    
+    <footer>
+        <img style="object-fit: contain;" id="logo" src="./LOGO BATMAN.jpeg" />
+        <span>Todos os direitos reservados ©</span>
+        <span>Desenvolvido por: Jorge Henrique Custodio</span>
+
+        <nav class="footer-navigation">
+            <ul class="footer-list">
+               <a href="./index.html">
+                    <li>HOME</li>
+                </a>
+                <a href="./contato.html">
+                    <li>CONTATO</li>
+                </a>
+                <a href="./fotos.html">
+                    <li>FOTOS</li>
+                </a>
+                <a href="./comentarios.html">
+                    <li>COMENTARIOS</li>
+                </a>
+            </ul>>
+
+        </nav>
+
+    </footer>
+
 </body>
 </html>
