--- a/comentarios.html
+++ b/comentarios.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comentarios</title>
 </head>
 <body>
-    Comentarios
+    <header>
+        <img id="logo" src="./LOGO BATMAN.jpeg" alt="logo-batman">
+        <nav>
+            <ul>
+                <a href="./index.html">
+                    <li>HOME</li>
+                </a>
+                <a href="./contato.html">
+                    <li>CONTATO</li>
+                </a>
+                <a href="./fotos.html">
+                    <li>FOTOS</li>
+                </a>
+                <a href="./comentarios.html">
+                    <li>COMENTARIOS</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
