--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,18 @@
         <h1>CONTATO</h1>
     </div>
 
-    
+    <form action="contato.html">
+
+        <label for="email">Email</label>
+        <input id="email" type=email" name="email" placeholder="Coloque um email valido" />
+
+        <label for="number">Numero</label>
+        <input type="number" id="number" type="number" name="number" placeholder="Seu numero aqui" />
+
+        <textarea style="display: block;" name="mensagem" id="mensagem" rows="10"></textarea>
+
+        <button>Enviar</button>
+    </form>
 
 </body>
 </html>
