Contato.ccs editado

--- a/contato.html
+++ b/contato.html
@@ -33,10 +33,10 @@
 
     <form action="contato.html">
 
-        <label for="email">Email</label>
+        <label style="display: block;" for="email">Email</label>
         <input id="email" type=email" name="email" placeholder="Coloque um email valido" />
 
-        <label for="number">Numero</label>
+        <label style="display: block;" for="number">Numero</label>
         <input type="number" id="number" type="number" name="number" placeholder="Seu numero aqui" />
 
         <textarea style="display: block;" name="mensagem" id="mensagem" rows="10"></textarea>
