--- a/fotos.html
+++ b/fotos.html
@@ -4,14 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./global.css">
     <title>Fotos</title>
 </head>
 <body>
     <header>
         <img id="logo" src="./LOGO BATMAN.jpeg" alt="logo-batman">
-        <nav>
-            <ul>
-                <a href="./index.html">
+            <nav>
+                <ul>
+                    <a href="./index.html">
+                        <li>HOME</li>
+                    </a>
+                    <a href="./contato.html">
+                        <li>CONTATO</li>
+                    </a>
+                    <a href="./fotos.html">
+                        <li>FOTOS</li>
+                    </a>
+                    <a href="./comentarios.html">
+                        <li>COMENTARIOS</li>
+                    </a>
+                </ul>
+            </nav>
+    </header>
+
+    <img src="./Images/batman 2.jpeg" alt="batman2">
+
+    <img src="./Images/batman 3.jpeg" alt="batman3">
+
+    <img src="./Images/batman 4.webp" alt="batman4">
+
+    <img src="./Images/batman 5.webp" alt="batman5">
+
+    <img src="./Images/batman 6.jpeg" alt="batman6">
+
+    <img src="./Images/batman 7.webp" alt="batman7">
+
+    <img src="./Images/batman 8.webp" alt="batman8">
+
+    <img src="./Images/batman 9.jpeg" alt="batman9">
+
+    <footer>
+        <img style="object-fit: contain;" id="logo" src="./LOGO BATMAN.jpeg" />
+        <span>Todos os direitos reservados ©</span>
+        <span>Desenvolvido por: Jorge Henrique Custódio</span>
+
+        <nav class="footer-navigation">
+            <ul class="footer-list">
+               <a href="./index.html">
                     <li>HOME</li>
                 </a>
                 <a href="./contato.html">
@@ -23,8 +63,11 @@
                 <a href="./comentarios.html">
                     <li>COMENTARIOS</li>
                 </a>
-            </ul>
+            </ul>>
+
         </nav>
-    </header>
+
+    </footer>
+
 </body>
 </html>
