--- a/fotos.html
+++ b/fotos.html
@@ -1,48 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./fotos.css">
     <title>Fotos</title>
 </head>
+
 <body>
     <header>
         <img id="logo" src="./LOGO BATMAN.jpeg" alt="logo-batman">
-            <nav>
-                <ul>
-                    <a href="./index.html">
-                        <li>HOME</li>
-                    </a>
-                    <a href="./contato.html">
-                        <li>CONTATO</li>
-                    </a>
-                    <a href="./fotos.html">
-                        <li>FOTOS</li>
-                    </a>
-                    <a href="./comentarios.html">
-                        <li>COMENTARIOS</li>
-                    </a>
-                </ul>
-            </nav>
+        <nav>
+            <ul>
+                <a href="./index.html">
+                    <li>HOME</li>
+                </a>
+                <a href="./contato.html">
+                    <li>CONTATO</li>
+                </a>
+                <a href="./fotos.html">
+                    <li>FOTOS</li>
+                </a>
+                <a href="./comentarios.html">
+                    <li>COMENTARIOS</li>
+                </a>
+            </ul>
+        </nav>
     </header>
+    <main>
 
-    <img src="./Images/batman 2.jpeg" alt="batman2">
+        <section class="foto1">
+            <img src="./Images/batman 2.jpeg" alt="">
+        </section>
+        <section class="foto2">
+            <img src="./Images/batman 3.jpeg" alt="">
+        </section>
+        <section class="foto3">
+            <img src="./Images/batman 4.webp" alt="">
+        </section>
+        <section class="foto4">
+            <img src="./Images/batman 5.webp" alt="">
+        </section>
+        <section class="foto5">
+            <img src="./Images/batman 6.jpeg" alt="">
+        </section>
+        <section class="foto6">
+            <img src="./Images/batman 7.webp" alt="">
+        </section>
+        <section class="foto7">
+            <img src="./Images/batman 8.webp" alt="">
+        </section>
+        <section class="foto8">
+            <img src="./Images/batman 9.jpeg" alt="">
+        </section>
+        <section class="foto9">
+            <img src="./Images/batman 10.jpeg" alt="">
+        </section>
+        <section class="foto10">
+            <img src="./Images/batman 11.png" alt="">
+        </section>
 
-    <img src="./Images/batman 3.jpeg" alt="batman3">
+    </main>
 
-    <img src="./Images/batman 4.webp" alt="batman4">
-
-    <img src="./Images/batman 5.webp" alt="batman5">
-
-    <img src="./Images/batman 6.jpeg" alt="batman6">
-
-    <img src="./Images/batman 7.webp" alt="batman7">
-
-    <img src="./Images/batman 8.webp" alt="batman8">
-
-    <img src="./Images/batman 9.jpeg" alt="batman9">
 
     <footer>
         <img style="object-fit: contain;" id="logo" src="./LOGO BATMAN.jpeg" />
@@ -51,7 +73,7 @@
 
         <nav class="footer-navigation">
             <ul class="footer-list">
-               <a href="./index.html">
+                <a href="./index.html">
                     <li>HOME</li>
                 </a>
                 <a href="./contato.html">
@@ -70,4 +92,5 @@
     </footer>
 
 </body>
+
 </html>
