--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./contato.css">
 
     <title>Contato</title>
 </head>
@@ -23,7 +24,7 @@
                     <li>FOTOS</li>
                 </a>
                 <a href="./comentarios.html">
-                    <li>COMENTARIOS</li>
+                    <li>COMENTÁRIOS</li>
                 </a>
             </ul>
         </nav>
@@ -35,8 +36,8 @@
     
         <form action="contato.html" method="POST">
     
-            <label for="nome">Nome:</label>
-            <input style="display: block" type="text" name="nome" id="nome" />
+            <label placeholder="Seu nome aqui"for="nome">Nome:</label>
+            <input type="text" name="nome" id="nome" />
             <label for="email">E-mail:</label>
             <input type="email" name="email" id="email" />
             <label for="assunto">Assunto:</label>
