--- a/comentarios.html
+++ b/comentarios.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comentarios</title>
+    <link rel="stylesheet" href="./global.css">
+
+    <title>Comentários</title>
 </head>
+
 <body>
     <header>
         <img id="logo" src="./LOGO BATMAN.jpeg" alt="logo-batman">
@@ -26,5 +30,30 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <h1>Comentários</h1>
+
+        <div class="comment">
+            <h3>Usuário 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar diam eu urna interdum, in hendrerit
+                ligula vestibulum.</p>
+        </div>
+
+        <div class="comment">
+            <h3>Usuário 2</h3>
+            <p>Sed euismod neque sed felis maximus, sit amet ultrices nisi faucibus. Praesent in eleifend ligula.</p>
+        </div>
+
+        <!-- Adicione mais divs com a classe "comment" para exibir mais comentários -->
+
+        <form class="comment-form">
+            <h3>Deixe um Comentário</h3>
+            <input type="text" placeholder="Nome">
+            <textarea placeholder="Comentário"></textarea>
+            <button type="submit">Enviar</button>
+        </form>
+    </main>
 </body>
+
 </html>
